--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_profile">Profile</string>
     <string name="title_classes">Classes</string>
     <string name="welcome">WELCOME</string>
+    <string name="admin">Admin</string>
 </resources>
