--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Asf App</string>
+    <string name="app_name">ASFPerformance</string>
     <string name="title_home">Home</string>
     <string name="title_profile">Profile</string>
     <string name="title_classes">Classes</string>
-    <string name="welcome">WELCOME</string>
+    <string name="welcome">ASF AND PERFORMANCE</string>
     <string name="admin">Admin</string>
 </resources>
