--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_classes">Classes</string>
     <string name="welcome">ASF AND PERFORMANCE</string>
     <string name="admin">Admin</string>
+    <string name="date">Select a date:</string>
 </resources>
