--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="welcome">ASF AND PERFORMANCE</string>
     <string name="admin">Admin</string>
     <string name="date">Select a date:</string>
+    <string name="address">3,Lefkonoikou street,3071,Limassol-Cyprus</string>
+    <string name="email">as.fitness.cy@gmail.com</string>
+    <string name="telephone">99851085</string>
 </resources>
