--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,12 @@
     <string name="email">as.fitness.cy@gmail.com</string>
     <string name="telephone">99851085</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Profile Fragment -->
+    <string name="profile_top_text">Profile</string>
+    <string name="profile_name_label">Name</string>
+    <string name="profile_surname_label">Surname</string>
+    <string name="profile_height_label">Height(cm)</string>
+    <string name="profile_weight_label">Weight(kg)</string>
+    <string name="profile_date_started">Date Started</string>
+    <string name="profile_id">ID</string>
 </resources>
