--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="profile_weight_label">Weight(kg)</string>
     <string name="profile_date_started">Date Started</string>
     <string name="profile_id">ID</string>
+    <string name="title_activity_admin_menu">AdminMenu</string>
 </resources>
