--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="profile_date_started">Date Started</string>
     <string name="profile_id">ID</string>
     <string name="title_activity_admin_menu">AdminMenu</string>
+    <string name="title_activity_class">ClassActivity</string>
 </resources>
