--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_info">Info</string>
     <string name="title_profile">Profile</string>
     <string name="title_classes">Classes</string>
-    <string name="welcome">ASF AND PERFORMANCE</string>
+    <string name="welcome">JOIN OUR FAMILY</string>
     <string name="admin">Admin</string>
     <string name="date">Pick a date</string>
     <string name="address">3,Lefkonoikou street,3071,Limassol-Cyprus</string>
