--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,12 @@
     <string name="profile_user_reset">Reset All</string>
     <string name="profile_user_view_classes">View Your Classes</string>
     <string name="user_classes">Your Classes</string>
+    <string name="register">Register</string>
+    <string name="register_email">Email</string>
+    <string name="register_telephone">Phone Number</string>
+    <string name="register_register">Register</string>
+
+
+
+
 </resources>
