--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ASFPerformance</string>
+    <string name="app_name">ASF App</string>
     <string name="title_home">Home</string>
     <string name="title_info">Info</string>
     <string name="title_profile">Profile</string>
@@ -29,8 +29,7 @@
     <string name="register_register">Register</string>
 
 
-
-=======
+    =======
 
     <!-- Gym Info -->
     <string name="address">3, Lefkonoikou street, 3071, Limassol-Cyprus </string>
