--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ASF App</string>
+    <string name="app_name">ASF Performance</string>
     <string name="title_home">Home</string>
     <string name="title_info">Info</string>
     <string name="title_profile">Profile</string>
