--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="register_class">Register Class</string>
     <string name="add">ADD</string>
     <string name="singleClass">For one time</string>
+    <string name="title_activity_user_details">UserDetails</string>
     >>>>>>> 341a3383f599be28888aae60b70507da763699b5
 
 </resources>
